--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .add-wrapper {
@@ -136,7 +136,7 @@ label[for="new-task"] {
 }
 
 .list-item > input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .delete__button .remove__img {
@@ -151,18 +151,18 @@ label[for="new-task"] {
 
 /* Completed */
 .list#completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .list-item .input-text {
-  display: none
+  display: none;
 }
 
 .list .list-item.edit-mode .input-text {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list .list-item.edit-mode .label {
