--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@
   padding: 0px;
 }
 
-.list-item, h3 {
+.list-item, 
+h3 {
   list-style: none;
 }
 
-.input, .button{
+.input, 
+.button{
   outline: none;
 }
 
